--- a/omnia/test/units/configs/oracle-relay-test.conf
+++ b/omnia/test/units/configs/oracle-relay-test.conf
@@ -12,34 +12,9 @@
 		}
   },
   "transports":["ssb"],
-  "feeds": [
-     "@UOxmD3Z7sDymyucCjbkrACbmthAxhj31Hx7l2XMQeJo=.ed25519",
-     "@UOxmD3Z7sDymyucCjbkrACbmthAxhj31Hx7l2XMQeJo=.ed25519",
-     "@0Zwqc8xeAIMauVIrHg7kJS+efnQCPhIgGvuF179oywI=.ed25519",
-     "@E4uOBRMPNTCnN137pqIdDNGCWKSrs+l29FVfsW8Bggc=.ed25519",
-     "@VZ+lUiqoK1rgu9nThgcRm0ISmYlqD1LJqnT5sx61T5Y=.ed25519",
-     "@hKuBiKzQJz/g2912eF4qapxC5Y9rD+Kczn2uJGozBTM=.ed25519",
-     "@dK5mOvmQTCv1SrQ9sWM4b9xgxBd97jaUBNgyf7ekHlg=.ed25519",
-     "@xvQutPIfVX7du3tNMD1ajQlhdxB79FFY1zrhmiUN174=.ed25519",
-     "@zmt5VkfkKw1Ezd7A09Zogm6xKkCLNxRGq/U/pOONF78=.ed25519",
-     "@6uGqZVzj3k+RY1SlSAaTCDpm87lW59QfLGNqaeoIsCo=.ed25519",
-     "@hyOm38vOhSn3VqMzP71PGDCnYFIXjdxEVRjeHKqZLO8=.ed25519",
-     "@v0cbsCXvklTRjRrjiK0y1XCfM0dBFmvO3OHuMnNhOJ4=.ed25519",
-     "@E/tjV1ge1GGaRCqEJq3rMi/I6+kqhrREF4vdpydHF3w=.ed25519",
-     "@PvgaufnfLqQHOY7In7uvapmfIE7sGbFK7qhjOhYkCP4=.ed25519",
-     "@ofKkbKoZUFDRTxOuOfYHzw+6j6hM0THn/aVddrtwV2c=.ed25519",
-     "@EkAjH/giz8oxNFolM4x8XCeHz7HeCjSBF5LRw7JW5R0=.ed25519",
-     "@DxIOhHJADFPdLqYbYliQ7J+XdM8xA+b76LRSkjF7NYY=.ed25519",
-     "@ch6uB/PaKSOYx4vanjJyPv3dBO3tzOmA5CzQKVO6Low=.ed25519",
-     "@q1MMp289GCx+P+7HIagp/NyTN2HFDRbYZcaS56HYHr8=.ed25519",
-     "@LvVNO8KdDSIRked++8HO1UTzGEKhtTtokITUFqGWNO8=.ed25519",
-     "@zWNHw9Gtt3Ym+2BQH+aVHjbudFBaA+PH97U6kUpBs+Y=.ed25519",
-     "@q4zUNlxSnG0lmENje6UrrSU4hnTNSJHgGK+fSJMHaLg=.ed25519",
-     "@jJjmRy8MV5tQIbU0bE4pvbmZl8oWNfbKxQnHDOl7Jwk=.ed25519",
-     "@JkMlfJAOXRlPw6nYjuK7cQiMokB1aSt4YgW7jyF2UJE=.ed25519",
-     "@C1Ltt8SN0Q2U8Wg6aiOcDX1GbXPNzZb0ZPh8ZAvP1bI=.ed25519",
-     "@gL2hcv87dQ0h4xZfApkEivl/J9YLjrFLp/izghSfaic=.ed25519"
-  ],
+  "scuttlebotIdMap": {
+    "0x1f8fbe73820765677e68eb6e933dcb3c94c9b708": "@i40pt/QgqhjIUOvq2166WZr5bXMGt/8/Zr5GD8yQRvA=.ed25519"
+  }
   "options": {
     "interval": 60,
     "msgLimit": 20,
