--- a/omnia/test/e2e/config/relay.conf
+++ b/omnia/test/e2e/config/relay.conf
@@ -19,6 +19,10 @@
   },
   "sources":["setzer"],
   "transports":["e2e"],
+  "scuttlebotIdMap": {
+    "0x1bb90cde8a032cb4963813a5b4db4981afa5b9c6": "@uqOcvBdpBXWNCm5WhjALbtyR8szWpihH/CVyNdycncQ=.ed25519",
+    "0xfadad77b3a7e5a84a1f7ded081e785585d4ffaf3": "@uqOcvBdpBXWNCm5WhjALbtyR8szWpihH/CVyNdycncQ=.ed25519"
+  },
   "pairs": {
     "BTCUSD": {
       "oracle": "0x9b637fDF5482340C823930366464c146f318b896",
