Test new dependency

--- a/omnia/Dockerfile
+++ b/omnia/Dockerfile
@@ -13,7 +13,7 @@ RUN git clone https://github.com/chronicleprotocol/omnia.git . \
 
 # Building gofer & spire
 WORKDIR /go/src/oracle-suite
-ARG ORACLE_SUITE_REF="tags/v0.10.0"
+ARG ORACLE_SUITE_REF="tags/v0.11.0-dev.7"
 RUN git clone https://github.com/chronicleprotocol/oracle-suite.git . \
   && git checkout --quiet ${ORACLE_SUITE_REF}
 
